# UE5-MCP

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  ai_integration.md  api_reference.md  architecture.md  automation.md  blender_mcp.md  commands.md  configurations.md  dependencies.md  monorepo_structure.md  pyproject.toml  research.md  troubleshooting.md  ue5_mcp.md  workflow.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/setup/: blender_setup.md  quickstart.md  ue5_setup.md
modules/mcp_cli/src/mcp/: __main__.py  cli.py
modules/mcp_core/src/mcp_core/: __init__.py  system_tools.py
modules/mcp_core/src/mcp_core/ai/: __init__.py  budget.py  client.py  factory.py  models.py  openai_provider.py  prompts.py  provider.py  safety.py
modules/mcp_core/src/mcp_core/config/: settings.py
modules/mcp_core/src/mcp_core/execution/: __init__.py  tool_executor.py
modules/mcp_core/src/mcp_core/observability/: __init__.py  context.py  logger.py
modules/mcp_core/src/mcp_core/policy/: __init__.py  engine.py
modules/mcp_core/src/mcp_core/registry/: __init__.py  registry.py
modules/mcp_core/src/mcp_core/storage/: __init__.py  artifact_manager.py
modules/mcp_protocol/schemas/: blender.json  core.json  ue5.json
modules/mcp_protocol/src/mcp_protocol/: __init__.py  models.py
modules/mcp_target_blender/scripts/: blender_server.py
modules/mcp_target_blender/src/mcp_target_blender/: __init__.py  tools.py
modules/mcp_target_ue5/plugin/: README.md  ue5_mcp_server.py
modules/mcp_target_ue5/src/mcp_target_ue5/: __init__.py  tools.py
scripts/: check_docs_contract.py  pr_wait_and_merge.sh  verify.sh  verify_ai_layer.py
tests/contract/: test_docs.py  test_models.py  test_schemas.py
tests/integration/: test_e2e_pipeline.py
tests/regression/: test_determinism.py  test_golden.py  test_safety_regression.py
tests/regression/data/: run_manifest.json  tool_error.json  tool_result_success.json
tests/unit/: test_ai_client.py  test_ai_layer.py  test_artifact_manager.py  test_blender_target.py  test_cli.py  test_config.py  test_executor.py  test_imports.py  test_logging.py  test_policy.py  test_registry.py  test_system_tools.py  test_ue5_target.py
(+6 files in other folders)
