[project]
name = "ue5-mcp"
version = "0.8.0"
description = "UE5 + Blender automation via Model Context Protocol (spec-first)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
  "mypy",
  "pre-commit",
  "pytest",
  "ruff",
  "jsonschema>=4.0",
  "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "venv",
  ".venv",
  "node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = "(^venv/|^\\.venv/|^node_modules/)"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
