[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ue5-mcp"
version = "1.0.0"
description = "UE5 + Blender automation via Model Context Protocol (spec-first)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "openai>=1.0.0",
  "httpx>=0.24.0",
]

[project.scripts]
mcp = "mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = [
  "modules/mcp_core/src/mcp_core",
  "modules/mcp_protocol/src/mcp_protocol",
  "modules/mcp_cli/src/mcp",
  "modules/mcp_target_blender/src/mcp_target_blender",
  "modules/mcp_target_ue5/src/mcp_target_ue5",
]

[tool.hatch.build.targets.sdist]
include = [
  "modules/**/*",
  "README.md",
  "LICENSE.md",
]

[dependency-groups]
dev = [
  "mypy",
  "pre-commit",
  "pytest",
  "ruff",
  "jsonschema>=4.0",
  "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "venv",
  ".venv",
  "node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = "(^venv/|^\\.venv/|^node_modules/)"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
